Anzeige der Labels in einer Legende
Um die Anzeige von Texten auf dem Bildschirm zu reduzieren, wurde die Anzeige der Labels in eine Legende ausgelagert

--- a/lite/examples/object_detection/android/app/src/main/res/layout/activity_camera.xml
+++ b/lite/examples/object_detection/android/app/src/main/res/layout/activity_camera.xml
@@ -53,4 +53,8 @@
     <include
         android:id="@+id/bottom_sheet_layout"
         layout="@layout/layout_bottom_sheet" />
+
+    <include
+        android:id="@+id/legend_layout"
+        layout="@layout/legend" />
 </android.support.design.widget.CoordinatorLayout>
